# stapl

./: .clang-format  .gitignore  .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
cmake/: FindSphinx.cmake
docs/: CMakeLists.txt  Doxyfile.in  annotator.rst  ast.rst  conf.py  grammar.rst  index.rst  irgen.rst  lexer.rst  parser.rst  types.rst  util.rst
examples/: recursion.stapl
include/: annotator.h  ast.h  ast_comparator.h  ast_printer.h  irgen.h  lexer.h  parser.h  typechecker.h  types.h  util.h
src/: CMakeLists.txt  annotator.cpp  ast.cpp  ast_comparator.cpp  ast_printer.cpp  irgen.cpp  kalc.cpp  lexer.cpp  parser.cpp  staplc.cpp  typechecker.cpp  types.cpp
tests/: CMakeLists.txt  annotator_test.cpp  lexer_test.cpp  parser_test.cpp  typechecker_test.cpp
